--- a/package.json
+++ b/package.json
@@ -15,9 +15,55 @@
   "keywords": [
     "sass",
     "scss",
+    "jump",
+    "jump to",
+    "jump to definition",
+    "jump to sass definition",
+    "jump to scss definition",
+    "jump to sass variable",
+    "jump to scss variable",
+    "jump to sass",
+    "jump to scss",
+    "jump sass",
+    "jump scss",
+    "scss jump",
+    "sass jump",
+    "sass navigation",
+    "scss navigation",
     "navigation",
     "definition",
-    "variables"
+    "variables",
+    "variable",
+    "sass variable",
+    "scss variable",
+    "sass variables",
+    "scss variables",
+    "sass variables",
+    "scss variables",
+    "open sass",
+    "open scss",
+    "open sass file",
+    "open scss file",
+    "open sass file",
+    "open scss file",
+    "sass file",
+    "scss file",
+    "sass files",
+    "scss files",
+    "sass files",
+    "scss files",
+    "sass file",
+    "scss file",
+    "open sass file",
+    "open scss file",
+    "navigate to sass",
+    "navigate to scss",
+    "navigate sass",
+    "navigate scss",
+    "go to sass",
+    "go to scss",
+    "go sass",
+    "go scss"
   ],
   "repository": {
     "type": "git",
