update extension icon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
         "lib": ["ES2020"],
         "sourceMap": true,
         "rootDir": "src",
-        "strict": true,
-        "esModuleInterop": true
+        "strict": false,
+        "noImplicitAny": false,
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "exclude": ["node_modules", ".vscode-test"]
-} 
+}
